[package]
name = "rebound-sys"
version = "0.1.0"
edition = "2021"
authors = ["Spencer Nelson"]
description = "Low-level bindings to the REBOUND C library for N-body simulations"
repository = "https://github.com/spenczar/rebound-sys"
license-file = "LICENSE"
keywords = ["rebound", "astrodynamics", "astronomy", "n-body"]
categories = ["aerospace::simulation", "science"]
links = "rebound"
exclude = [
  "vendor/rebound/docs/*",
  "vendor/rebound/ipython_examples/*",
  "vendor/rebound/examples/*",
  "vendor/rebound/legacy/*",
  "vendor/rebound/mkdocs.yml",
  "vendor/rebound/others/*",
  "vendor/rebound/postBuild",
  "vendor/rebound/pyproject.toml",
  "vendor/rebound/rebound/*"
]

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.79"

[dependencies]
libc = "0.2.147"
