[package]
name = "rebound-sys"
version = "0.1.1"
edition = "2021"
authors = ["Spencer Nelson"]
description = "Low-level bindings to the REBOUND C library for N-body simulations"
repository = "https://github.com/spenczar/rebound-sys"
license = "GPL-3.0-or-later"
license-file = "LICENSE"
keywords = ["rebound", "astrodynamics", "astronomy", "n-body"]
categories = ["aerospace::simulation", "science"]
links = "rebound"
include = [
  "vendor/rebound/src/*",
  "vendor/rebound/LICENSE",
  "vendor/rebound/README.md",
  "**/*.rs",
  "Cargo.toml",
]

[build-dependencies]
bindgen = "0.66.1"
cc = "1.0.79"

[dependencies]
libc = "0.2.147"
